# golden-axe

./: LICENSE  README.md  docker-compose.yaml
backend/: .gitignore  README.md  docker-compose.yaml
backend/backend/: Dockerfile  pyproject.toml
backend/backend/app/: main.py
backend/backend/app/api/api_v1/: api.py
backend/backend/app/api/api_v1/endpoints/: artifacts.py  configs.py
backend/backend/app/backup/: backup.py  backup_location.py  nsxmgr_auth.py  nsxmgr_backup.py  sftp_client.py  vcenter_auth.py  vcenter_backup.py
backend/backend/app/core/: config.py
backend/backend/app/crud/: __init__.py  artifact.py  config.py
backend/backend/app/db/: mongodb.py
backend/backend/app/schemas/: artifact.py  config.py
backend/backend/app/tests/api/api_v1/: test_config.py
backend/backend/app/tests/utils/: utils.py
backend/backend/docs/: api.md
frontend/: Dockerfile
frontend/project/: package-lock.json  package.json
frontend/project/public/: index.html
frontend/project/src/: App.css  App.tsx  index.tsx
frontend/project/src/pages/: Backup.tsx  NotFound.tsx
frontend/project/src/parts/: Alert.tsx  Header.tsx  Sidenav.tsx  Subnav.tsx
nginx/: default.conf
