[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Tomoyuki Tanigaki <87210700+ttanigaki@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
motor = "^2.5.1"
certifi = "^2021.10.8"
requests = "^2.28.1"
paramiko = "^3.0.0"
humanize = "^4.6.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.9b0"
isort = "^5.9.3"
pytest = "^6.2.5"
python-dotenv = "^0.19.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
